--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,5 +22,14 @@ jobs:
     - name: Install dependencies
       run: npm install
 
-    - name: Run tests
-      run: npm test
+    - name: Run software tests
+      run: npm run test-controller
+
+    - name: Run API
+      run: npm start &
+
+    - name: Wait API is running
+      run: sleep 5
+
+    - name: Run API tests
+      run: npm run test-external
